<!--
  ~ /*******************************************************************************
  ~  *
  ~  * Copyright (c) ${year} AirWatch, LLC. All rights reserved.
  ~  * This product is protected by copyright and intellectual property laws in
  ~  * the United States and other countries as well as by international treaties.
  ~  * AirWatch products may be covered by one or more patents listed at
  ~  * http://www.vmware.com/go/patents.
  ~  *
  ~ *******************************************************************************/
  -->

<resources>
    <string name="app_name">AirWatch Device Check-in</string>
    <string name="action_settings">Settings</string>
    <string name="action_search_owner">Search Owners</string>
    <string name="action_add_owner">Add Owner</string>
    <string name="action_sync_owners">Sync Owners</string>
    <string name="action_sync_device_info">Sync Device Info</string>
    <string name="current_owner_label">Current Owner</string>
    <string name="device_info_label">Device Info</string>
    <string name="change_owner_label">Change Owner</string>
    <string name="ellipsis">...</string>
    <string name="search_hint">Search owners</string>
    <string name="cancel_btnTxt">Cancel</string>
    <string name="ok_btnTxt">Submit</string>
    <string name="aw_logo">AirWatch Logo</string>
    <string name="action_about">About</string>
</resources>
