<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Checkin">

    <!--
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    -->

    <item android:id="@+id/action_search"
        android:title="@string/action_search_owner"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_add_owner"
    android:title="@string/action_add_owner"
    android:icon="@android:drawable/ic_input_add"
    app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_sync_owners"
        android:title="@string/action_sync_owners"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
